package com.aalpov.opendbadapter.type;

public class DbFloat32 extends DbFloat {

  public DbFloat32() {
    super();
  }
}
