package com.aalpov.opendbadapter.type;

public class DbInt16 extends DbNumericType<Short> {

  public DbInt16() {
    super(Short.TYPE);
  }
}
