package com.aalpov.opendbadapter.type;

public class DbInt32 extends DbInt {

    public DbInt32() {
        super(Integer.TYPE);
    }
}
