package com.aalpov.opendbadapter.type;

/*public class DbMap<K extends DbType<?>, V extends DbType<?>> extends DbType<Map<K, V>> {

    public DbMap() {
        super();
    }
}*/
